# cl-linpack-wrap

./: ProjectHome.md  README  configure.ac
src/: cl_linpack_wrap.c  cl_linpack_wrap.h
test/: Makefile  daxpy.c  dcopy.c  dgemm.c  dger.c  dtrsm.c  dtrsv.c  idamax.c
trunk/: AUTHORS  Makefile.am  README  configure.ac
trunk/src/: Makefile.am  cl_linpack_wrap.c  cl_linpack_wrap.h
trunk/test/: Makefile  dgemm.c  dgemv.c  dscale.c  dswap.c
